tests/negative/symbols/multiple-discard.orng
fn main() -> Int
    let x = 4
    _ = x
    _ = x
    4